--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@ lib_deps =
 build_flags =
     -std=c++17
     -fno-threadsafe-statics
-    -DIS_DEBUG=0
+    -DDEBUG=1
     -Os
     -ffunction-sections
     -fdata-sections
@@ -51,7 +51,7 @@ lib_deps =
 build_flags =
     -std=c++17
     -fno-threadsafe-statics
-    -DIS_DEBUG=0
+    -DDEBUG=0
     -Os
     -ffunction-sections
     -fdata-sections
