--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,8 @@ framework = arduino
 lib_deps =
     symlink:///Users/pierre/CLionProjects/LED-Segments
     fastled/FastLED@^3.10.0
+lib_ignore =
+    I2S
 build_flags =
     -std=c++17
     -fno-threadsafe-statics
